# scroll-and-sigil

./: .gitignore  CMakeLists.txt  Input.js  Network.js  README.md  Render.js  RenderBuffer.js  RenderSystem.js  ShaderSystem.js  app.html  app.js  app.sh  baron.go  block.go  browser.sh  build.sh  bundle.sh  camera.js  client.sh  color.f  color.v  compile-shaders.sh  compress.sh  draw.js  editor.go  editor.sh  electron.sh  eslintrc.json  game.go  game.sh  gdb.sh  get-dependencies-mac.sh  get-dependencies.sh  get-electron.sh  glsl-to-spir-v.sh  go.mod  go.sum  graphics.js  guidelines.md  headless.mk  (+31 more)
bundle/: bundle.go  bundle.sh
client/: app.go  baron.go  block.go  camera.go  cast.go  human.go  input.go  items.go  light.go  main.go  missiles.go  numbers.go  occlusion.go  particles.go  scenery.go  state.go  thing.go  tile.go  wad.go  webgl.go  world.go  you.go
data/: tiles
desktop/: index.html  main.js
desktop-editor/: Cargo.toml
editor/: block.go  editor.go  light.go  missiles.go  npc.go  person.go  scenery.go  server.go  world.go  you.go
editor-lib/: Cargo.toml
electron/: main.html  main.js  package-lock.json  package.json
hymn/: matrix.hm
legacy/: App.js  Input.js  Matrix.js  Render.js  RenderBuffer.js  RenderSystem.js  Skeleton.js  app.html  service.js
maps/: backup.map  example.wad  temp.map  test.map
metal/: AppDelegate.swift  Renderer.swift  ShaderTypes.h  Shaders.metal  ViewController.swift
models/: human.arms.wad  human.model  human.wad  notes.md
native/: main.c  makefile  scroll.sh  testing  valgrind.sh
platforming/: README.md  app.html  (+20 more)
(+928 files in other folders)
